--- a/Resources/translations/contactus.en.yml
+++ b/Resources/translations/contactus.en.yml
@@ -5,5 +5,7 @@
 'User': 'User'
 'Type': 'Type'
 'Created At': 'Created At'
+'Phone': 'Phone'
+'Email': 'Email'
 'Search in user names and emails': 'Search in user names and emails'
 'Contact Us List': Contact Us List
